# ai-helpers

./: .gitignore  README.md  pyproject.toml
ai_helpers/: cli.py  llm.py
ai_helpers/flows/: __init__.py  anki.py  coverletter.py
ai_helpers/prompts/: __init__.py  anki.md  coverletter.md
ai_helpers/providers/: anthropic.py  openai.py
